# M1t3SubspaceSweep

./: .gitignore  README.md  cli.py  pyproject.toml
configs/: sweep_medium.json  sweep_small.json
scripts/: quick_demo.py
src/alpha_em_soup/: __init__.py  cli.py  config.py  constants.py  rng.py
src/alpha_em_soup/layers/: __init__.py  m1_wavepaths.py  m2_interface.py  m3_topology.py
src/alpha_em_soup/physics/: __init__.py  effective_coupling.py  estimators.py  gates.py  scattering.py  wave_operator.py
src/alpha_em_soup/reporting/: report_md.py
src/alpha_em_soup/search/: __init__.py  objective.py  refine.py  robustness.py  sweep.py
src/alpha_em_soup/viz/: diagnostics.py  soup_plot.py
src/alpha_soup/: __init__.py  cli.py  config.py  constants.py  rng.py
src/alpha_soup/reporting/: __init__.py  export.py  report_md.py
src/alpha_soup/search/: __init__.py  objectives.py  refine.py  robustness.py  sweep.py
src/alpha_soup/soup/: __init__.py  constraints.py  dynamics.py  emergent_m2.py  graph_gen.py  observables.py
src/alpha_soup/viz/: __init__.py  soup_plot.py  summary_plots.py
src/alpha_soup_wave/: __init__.py  cli.py  config.py  constants.py  rng.py
src/alpha_soup_wave/reporting/: report_md.py
src/alpha_soup_wave/search/: __init__.py  alpha_estimators.py  filters.py  refine.py  robustness.py  sweep.py
src/alpha_soup_wave/soup/: __init__.py  graph_gen.py  (+5 more)
tests/: test_alpha_estimator.py  test_alpha_estimators.py  test_alpha_hat_bounds.py  test_cli_smoke.py  test_color_map.py  test_determinism.py  test_emergent_m2.py  test_graph_gen.py  test_m2_detector.py  test_m2_min_size.py  test_observables_shapes.py  test_q_ratio.py  test_soup_plot_colors.py
(+4 files in other folders)
